# moj-search

./: Dockerfile  README.md  compose.yaml  ocp_deploy.yaml  pyproject.toml
moj-search/: main.py
openshift/: build.yaml  deployment.yaml
src/vector_search/: __init__.py  embedding_api.py  knowledge_base.py  main.py  models.py
