[project]
name = "vector-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "fastapi-health>=0.4.0",
    "fastapi[standard]>=0.135.1",
    "openai>=2.26.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pymilvus>=2.6.9",
    "sentence-transformers>=5.2.3",
]
